build/k8s/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    app: core
spec:
  selector:
    matchLabels:
      app: core
  replicas: 1
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: consumer
          image: saferwall/consumer:0.1.7
