build/k8s/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchbase-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator
  template:
    metadata:
      labels:
        app: couchbase-operator
    spec:
      containers:
      - name: couchbase-operator 
        image: couchbase/operator:1.1.0
        command:
        - couchbase-operator
        args:
        - -enable-upgrades=false # Disable experimental upgrade feature
        ports:
          - name: readiness-port
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: readiness-port
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 19
      serviceAccountName: couchbase-operator
