build/k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: ui
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 2
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: frontend
        image: saferwall/ui:latest
        ports:
        - containerPort: 8080
