build/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend                                
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort 
  # type: LoadBalancer
  # loadBalancerIP: "YOUR.IP.ADDRESS.HERE"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: backend
          image: saferwall/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
