build/k8s/multiav-bitdefender.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitdefender-svc
  labels:
    app: bitdefender
spec:
  selector:
    app: bitdefender
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitdefender
  labels:
    app: bitdefender
spec:
  selector:
    matchLabels:
      app: bitdefender
  replicas: 1
  template:
    metadata:
      labels:
        app: bitdefender
    spec:
      containers:
        - name: gobitdefender
          image: saferwall/gobitdefender:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
