build/k8s/multiav-clamav.yaml
apiVersion: v1
kind: Service
metadata:
  name: clamav-svc
  labels:
    app: clamav
spec:
  selector:
    app: clamav
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clamav
  labels:
    app: clamav
spec:
  selector:
    matchLabels:
      app: clamav
  replicas: 1
  template:
    metadata:
      labels:
        app: clamav
    spec:
      containers:
        - name: goclamav
          image: saferwall/goclamav:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
