build/k8s/multiav-comodo.yaml
apiVersion: v1
kind: Service
metadata:
  name: comodo-svc
  labels:
    app: comodo
spec:
  selector:
    app: comodo
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comodo
  labels:
    app: comodo
spec:
  selector:
    matchLabels:
      app: comodo
  replicas: 1
  template:
    metadata:
      labels:
        app: comodo
    spec:
      containers:
        - name: gocomodo
          image: saferwall/gocomodo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
