build/k8s/multiav-eset.yaml
apiVersion: v1
kind: Service
metadata:
  name: eset-svc
  labels:
    app: eset
spec:
  selector:
    app: eset
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eset
  labels:
    app: eset
spec:
  selector:
    matchLabels:
      app: eset
  replicas: 1
  template:
    metadata:
      labels:
        app: eset
    spec:
      containers:
        - name: goeset
          image: saferwall/goeset:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
