build/k8s/multiav-fsecure.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsecure-svc
  labels:
    app: fsecure
spec:
  selector:
    app: fsecure
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsecure
  labels:
    app: fsecure
spec:
  selector:
    matchLabels:
      app: fsecure
  replicas: 1
  template:
    metadata:
      labels:
        app: fsecure
    spec:
      containers:
        - name: gofsecure
          image: saferwall/gofsecure:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
