build/k8s/multiav-mcafee.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcafee-svc
  labels:
    app: mcafee
spec:
  selector:
    app: mcafee
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcafee
  labels:
    app: mcafee
spec:
  selector:
    matchLabels:
      app: mcafee
  replicas: 1
  template:
    metadata:
      labels:
        app: mcafee
    spec:
      containers:
        - name: gomcafee
          image: saferwall/gomcafee:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
