build/k8s/multiav-symantec.yaml
apiVersion: v1
kind: Service
metadata:
  name: symantec-svc
  labels:
    app: symantec
spec:
  selector:
    app: symantec
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symantec
  labels:
    app: symantec
spec:
  selector:
    matchLabels:
      app: symantec
  replicas: 1
  template:
    metadata:
      labels:
        app: symantec
    spec:
      containers:
        - name: gosymantec
          image: saferwall/gosymantec:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
