build/k8s/multiav.sophos.yaml
apiVersion: v1
kind: Service
metadata:
  name: sophos-svc
  labels:
    app: sophos
spec:
  selector:
    app: sophos
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sophos
  labels:
    app: sophos
spec:
  selector:
    matchLabels:
      app: sophos
  replicas: 1
  template:
    metadata:
      labels:
        app: sophos
    spec:
      containers:
        - name: gosophos
          image: saferwall/gosophos:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
          volumeMounts:
          - name: samples
            mountPath: /samples
      volumes:
      - name: samples
        persistentVolumeClaim:
          claimName: samples-pv-claim
