build/k8s/nsqadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsqadmin
  labels:
    app: nsq
    component: nsqadmin
spec:
  ports:
    - port: 4170
      targetPort: 4170
      name: tcp
    - port: 4171
      targetPort: 4171
      name: http
  type: NodePort
  selector:
    app: nsq
    component: nsqadmin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsqadmin
spec:
  selector:
    matchLabels:
      app: nsq
      component: nsqadmin
  replicas: 2
  template:
    metadata:
      labels:
        app: nsq
        component: nsqadmin
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      containers:
        - name: nsqadmin
          image: nsqio/nsq:v1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4170
              name: tcp
            - containerPort: 4171
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
          command:
            - /usr/local/bin/nsqadmin
            - -lookupd-http-address
            - nsqlookupd-0.nsqlookupd.default.svc.cluster.local:4161
            - -lookupd-http-address
            - nsqlookupd-1.nsqlookupd.default.svc.cluster.local:4161
            - -lookupd-http-address
            - nsqlookupd-2.nsqlookupd.default.svc.cluster.local:4161
      # No pre-stop hook is required, a SIGTERM plus some time is all that's
      # needed for graceful shutdown of a node.
      terminationGracePeriodSeconds: 5
