build/k8s/nsqlookupd.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsqlookupd
  labels:
    app: nsq
    component: nsqlookupd
spec:
  ports:
    - port: 4160
      targetPort: 4160
      name: tcp
    - port: 4161
      targetPort: 4161
      name: http
  clusterIP: None
  selector:
    app: nsq
    component: nsqlookupd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nsqlookupd
spec:
  serviceName: "nsqlookupd"
  replicas: 1
  selector:
    matchLabels:
      app: nsq
      component: nsqlookupd
  template:
    metadata:
      labels:
        app: nsq
        component: nsqlookupd
    spec:
      containers:
        - name: nsqlookupd
          image: nsqio/nsq:v1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4160
              name: tcp
            - containerPort: 4161
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 2
          command:
            - /usr/local/bin/nsqlookupd
      # No pre-stop hook is required, a SIGTERM plus some time is all that's
      # needed for graceful shutdown of a node.
      terminationGracePeriodSeconds: 5
