build/k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
