build/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
